--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,20 @@
-.App {
-  text-align: center;
+.mr-5{
+  margin-right: 5px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.ml-5{
+  margin-left: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pr-5{
+  padding-right: 5px
 }
 
-.App-link {
-  color: #61dafb;
+.mt-10{
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-right{
+  float: right;
+  cursor: pointer;
 }
