Changes to be committed: 	modified:   package.json 	modified:   src/App.css 	modified:   src/App.js 	modified:   src/components/taskControl.js 	modified:   src/components/taskControlSearch.js 	modified:   src/components/taskControlSort.js 	modified:   src/components/taskForm.js 	modified:   src/components/taskItem.js 	modified:   src/components/taskList.js

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
 .text-right:hover{
   color: red;
 }
+
+.sort-selected::after {
+  content: '\f00c';
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  margin: 0px 0px 0px 10px;
+  display: inline-block;
+}
